--- a/src/_includes/doc.hbs
+++ b/src/_includes/doc.hbs
@@ -3,27 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>{{title}}</title>
+  {{{cssPath cssFile}}}
 </head>
 <body>
 {{{ content }}}
-
-<script type="module">
-  import { use } from 'https://unpkg.com/ficusjs?module'
-  import { html, renderer } from 'https://unpkg.com/ficusjs-renderers@latest/dist/lit-html.js'
-  import { loadComponents } from './components/loader/index.js'
-
-  // use loader to load many components
-  loadComponents(['button', 'tabs'])
-          .then(modules => {
-            modules.forEach(m => use(m.module, { renderer, html }))
-          })
-
-  // events
-  const btn = document.querySelector('fc-button')
-  if (btn) btn.addEventListener('click', e => console.log(e))
-
-  const tabs = document.querySelector('fc-tabs')
-  if (tabs) tabs.addEventListener('change', e => console.log(e))
-</script>
+{{{bootstrap modulePath}}}
 </body>
 </html>
