--- a/src/_includes/main.hbs
+++ b/src/_includes/main.hbs
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FicusJS components</title>
+  <link rel="stylesheet" href="http://192.168.0.22:8080/global.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/android-chrome-384x384.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#54e4e5">
   <style>
     body {
       margin: 0;
