feat: add accordion, tooltip and move button

--- a/src/_includes/doc.hbs
+++ b/src/_includes/doc.hbs
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>{{title}}</title>
   {{{cssPath cssFile}}}
+  <link rel="stylesheet"
+        href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.3.2/build/styles/darcula.min.css">
 </head>
 <body>
 {{{ content }}}
 {{{bootstrap modulePath}}}
+{{{scriptPath demoScript}}}
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.3.2/build/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad()</script>
 </body>
 </html>
