--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FicusJS components</title>
-<!--  <link rel="stylesheet" href="http://192.168.0.22:8080/global.css">-->
+  <link rel="stylesheet" href="http://192.168.0.22:8081/global.css">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/android-chrome-192x192.png">
@@ -13,6 +13,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#54e4e5">
+
+  <!-- component css START -->
+  {% set css %}
+    {% include "../css/site-header.css" %}
+    {% include "../css/button.css" %}
+  {% endset %}
+  <style>
+    {{ css | safe }}
+  </style>
+  <!-- component css END -->
+
   <style>
     body {
       margin: 0;
@@ -22,16 +33,6 @@
       max-height: 100%;
       font-family: sans-serif;
       line-height: 1.5em;
-    }
-
-    #header {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100px;
-      overflow: hidden; /* Disables scrollbars on the header frame. To enable scrollbars, change "hidden" to "scroll" */
-      background: #BCCE98;
     }
 
     #nav {
@@ -89,10 +90,14 @@
   </style>
 </head>
 <body>
-  <header id="header">
-    <div id="logo">
-      <h1>CoolLogo</h1>
-    </div>
+  <header class="fc-site-header">
+    <section class="fc-site-header__section">
+      <img src="../img/logo.png" width="150" alt="FicusJS Components">
+    </section>
+    <section class="fc-site-header__section">
+      <a href="..." class="fc-button">Docs</a>
+      <a href="..." class="fc-button">GitHub</a>
+    </section>
   </header>
 
   <main>
