--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,3 +1,24 @@
-.fc__button {
-  color: red;
+.fc-button {
+  appearance: none;
+  background: var(--primary-color);
+  border: 1px solid var(--primary-dark-color);
+  border-radius: 2px;
+  color: var(--white-color);
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1.2;
+  outline: none;
+  padding: var(--spacer-xs) var(--spacer-sm);
+  text-align: center;
+  text-decoration: none;
+  transition: background .2s, border .2s, box-shadow .2s, color .2s;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  font-weight: 600;
+}
+
+.fc-button:focus,
+.fc-button:hover {
+  background: var(--primary-dark-color);
 }
