feat: add site header to shell

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -25,15 +25,6 @@
   <!-- component css END -->
 
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      height: 100%;
-      max-height: 100%;
-      font-family: sans-serif;
-      line-height: 1.5em;
-    }
 
     #nav {
       position: absolute;
@@ -90,13 +81,13 @@
   </style>
 </head>
 <body>
-  <header class="fc-site-header">
+  <header class="[ fc-site-header ] [ fu-pad-left-lg fu-pad-right-lg ]">
     <section class="fc-site-header__section">
       <img src="../img/logo.png" width="150" alt="FicusJS Components">
     </section>
     <section class="fc-site-header__section">
-      <a href="..." class="fc-button">Docs</a>
-      <a href="..." class="fc-button">GitHub</a>
+      <a href="..." class="fc-button fc-button--link">Docs</a>
+      <a href="..." class="fc-button fc-button--link">GitHub</a>
     </section>
   </header>
 
