feat: add global styles (sass)

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -16,6 +16,7 @@
 
   <!-- component css START -->
   {% set css %}
+    {% include "../css/global.css" %}
     {% include "../css/site-header.css" %}
     {% include "../css/button.css" %}
   {% endset %}
