--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -71,22 +71,22 @@ $type-scale: (
 
 $spacer-unit: 1rem;
 $spacer-none: 0;
-$spacer-2xs: 0.25 * $spacer-unit;
+$spacer-xxs: 0.25 * $spacer-unit;
 $spacer-xs: 0.375 * $spacer-unit;
 $spacer-sm: 0.5 * $spacer-unit;
 $spacer-md: 0.75 * $spacer-unit;
 $spacer-lg: 2 * $spacer-unit;
 $spacer-xl: 3.25 * $spacer-unit;
-$spacer-2xl: 5.25 * $spacer-unit;
+$spacer-xxl: 5.25 * $spacer-unit;
 $spacers: (
   none: $spacer-none,
-  2xs: $spacer-2xs,
+  xxs: $spacer-xxs,
   xs: $spacer-xs,
   sm: $spacer-sm,
   md: $spacer-md,
   lg: $spacer-lg,
   xl: $spacer-xl,
-  2xl: $spacer-2xl
+  xxl: $spacer-xxl
 );
 
 // Grid breakpoints
