--- a/src/css/main-layout.css
+++ b/src/css/main-layout.css
@@ -1,4 +1,4 @@
-.fc-site-header {
+.fc-header {
   grid-area: header;
 }
 .fc-content {
@@ -17,9 +17,10 @@
 }
 .fc-sidebar {
   grid-area: sidebar;
+  width: 100%
 }
 
-.fc-grid-wrapper {
+.fl-grid-wrapper {
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-areas: 
@@ -27,12 +28,12 @@
     "sidebar"
     "content";
   min-height: 100vh;
-  width: 100vw;
 }
 
 @media (min-width: 36em) {
-  .fc-grid-wrapper {
-    grid-template-columns: 2fr 4fr;
+  .fl-grid-wrapper {
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: 60px auto;
     grid-template-areas: 
       "header header"
       "sidebar content";
