feat: update styles

--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.3.2/build/styles/darcula.min.css">
 </head>
 <body>
-{{ content | safe }}
-{% bootstrap modulePath | safe %}
-{% scriptPath demoScript | safe %}
+  <div class="fu-pad-xl">
+    {{ content | safe }}
+    {% bootstrap modulePath | safe %}
+    {% scriptPath demoScript | safe %}
+  </div>
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.3.2/build/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad()</script>
 </body>
