--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -18,6 +18,7 @@
     {% include "../css/global.css" %}
     {% include "../css/main-layout.css" %}
     {% include "../css/header.css" %}
+    {% include "../css/sidebar.css" %}
     {% include "../css/button.css" %}
     {% endset %}
     <style>
