--- a/src/css/main-layout.css
+++ b/src/css/main-layout.css
@@ -1,12 +1,14 @@
 .fc-header {
   grid-area: header;
 }
+
 .fc-content {
   grid-area: content;
   overflow: hidden;
   padding-top: 56.25%;
   position: relative;
 }
+
 .fc-content iframe {
   border: 0;
   height: 100%;
@@ -15,6 +17,7 @@
   top: 0;
   width: 100%;
 }
+
 .fc-sidebar {
   grid-area: sidebar;
   width: 100%
@@ -32,8 +35,8 @@
 
 @media (min-width: 36em) {
   .fl-grid-wrapper {
-    grid-template-columns: 250px 1fr;
-    grid-template-rows: 60px auto;
+    grid-template-columns: var(--sidebar-width) 1fr;
+    grid-template-rows: var(--header-height) auto;
     grid-template-areas: 
       "header header"
       "sidebar content";
