feat: separate global and utility styles

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -15,7 +15,8 @@
 
     <!-- component css START -->
     {% set css %}
-    {% include "../css/global.css" %}
+    {% include "../css/ficus-globals.css" %}
+    {% include "../css/ficus-utilities.css" %}
     {% include "../css/main-layout.css" %}
     {% include "../css/header.css" %}
     {% include "../css/sidebar.css" %}
