refactor: change utility class namespace

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -70,7 +70,7 @@
       <div class="fc-sidebar">
         <nav id="nav">
           <div class="innertube">
-            <h2>Custom elements</h2>
+            <h2 class="u-text-sm u-text-transform-uppercase">Custom elements</h2>
             <ul>
               {%- for post in collections.customElements -%}
                 <li>
@@ -78,7 +78,7 @@
                 </li>
               {%- endfor -%}
             </ul>
-            <h2>HTML</h2>
+            <h2 class="u-text-sm u-text-transform-uppercase">HTML</h2>
             <ul>
               {%- for post in collections.html -%}
                 <li>
