--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -8,7 +8,7 @@
   <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
 <body>
-  <div class="fu-pad-xl">
+  <div class="u-pad-xl">
     {{ content | safe }}
     {% bootstrap modulePath | safe %}
     {% scriptPath demoScript | safe %}
