--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,40 +1,40 @@
 h1,
-.text-xxl {
+.u-text-xxl {
   font-size: var(--text-xxl);
   line-height: var(--heading-line-height);
 }
 
 h2,
-.text-xl {
+.u-text-xl {
   font-size: var(--text-xl);
   line-height: var(--heading-line-height);
 }
 
 h3,
-.text-lg {
+.u-text-lg {
   font-size: var(--text-lg);
   line-height: var(--heading-line-height);
 }
 
 h4,
-.text-md {
+.u-text-md {
   font-size: var(--text-md);
   line-height: var(--heading-line-height);
 }
 
 h5,
-.text-sm {
+.u-text-sm {
   font-size: var(--text-sm);
   line-height: var(--heading-line-height);
 }
 
 h6,
-.text-xs {
+.u-text-xs {
   font-size: var(--text-xs);
   line-height: var(--heading-line-height);
 }
 
 p,
-.text-base {
+.u-text-base {
   line-height: var(--body-line-height);
 }
