--- a/src/sass/utilities/_generate-css.scss
+++ b/src/sass/utilities/_generate-css.scss
@@ -8,7 +8,7 @@
 ///
 @mixin generate-css($selector, $property, $items) {
   @each $key, $value in $items {
-    #{'.fu-' + $selector + '-' + $key} {
+    #{'.u-' + $selector + '-' + $key} {
       #{ $property }: #{$value};
     }
   }
