--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -4,5 +4,22 @@
 }
 
 .fc-tabs__tabs {
+  isplay: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+  border-bottom: 1px solid #dee2e6;
   list-style: none;
+}
+
+.fc-tabs__tabs li {
+  margin-bottom: -1px;
+}
+
+.fc-tabs__tabs li label {
+  display: block;
+  padding: .5rem 1rem;
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem;
+  border: 1px solid transparent;
 }
