feat: update tab styles

--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -4,7 +4,8 @@
 }
 
 .fc-tabs__tabs {
-  isplay: flex;
+  display: flex;
+  display: flex;
   flex-wrap: wrap;
   padding-left: 0;
   margin-bottom: 0;
