--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -4,11 +4,20 @@
   <meta charset="UTF-8">
   <title>{{title}}</title>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
+  <!-- component css START -->
+  {% set css %}
+  {% include "../css/content.css" %}
+  {% endset %}
+  <style>
+    {{css | safe}}
+  </style>
+  <!-- component css END -->
   {% cssPath cssFile | safe %}
   <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
 <body>
-  <div class="u-pad-xl">
+  <div class="[ fc-content ] [ fu-pad-xl fu-flow ]">
     {{ content | safe }}
     {% bootstrap modulePath | safe %}
     {% scriptPath demoScript | safe %}
