--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FicusJS components</title>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/android-chrome-384x384.png">
@@ -12,7 +13,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#54e4e5">
-
     <!-- component css START -->
     {% set css %}
     {% include "../css/ficus-globals.css" %}
@@ -20,35 +20,13 @@
     {% include "../css/main-layout.css" %}
     {% include "../css/header.css" %}
     {% include "../css/sidebar.css" %}
+    {% include "../css/navigation.css" %}
     {% include "../css/button.css" %}
     {% endset %}
     <style>
       {{css | safe}}
     </style>
     <!-- component css END -->
-
-    <style>
-
-      p {
-        color: #555;
-      }
-
-      nav ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-      }
-
-      nav ul a {
-        color: darkgreen;
-        text-decoration: none;
-      }
-
-      * html main {
-        height: 100%;
-        width: 100%;
-      }
-    </style>
   </head>
   <body>
 
@@ -63,30 +41,20 @@
         </section>
       </header>
 
-      <main class="fc-content">
+      <main class="fc-frame">
         <iframe src="components/html/button" frameborder="0" name="comp-frame"></iframe>
       </main>
 
       <div class="fc-sidebar">
-        <nav id="nav">
-          <div class="innertube">
-            <h2 class="u-text-sm u-text-transform-uppercase">Custom elements</h2>
-            <ul>
-              {%- for post in collections.customElements -%}
-                <li>
-                  <a href=".{{post.url}}" target="comp-frame">{{post.data.label}}</a>
-                </li>
-              {%- endfor -%}
-            </ul>
-            <h2 class="u-text-sm u-text-transform-uppercase">HTML</h2>
-            <ul>
-              {%- for post in collections.html -%}
-                <li>
-                  <a href=".{{post.url}}" target="comp-frame">{{post.data.label}}</a>
-                </li>
-              {%- endfor -%}
-            </ul>
-          </div>
+        <nav class="c-side-nav" id="nav">
+          <h2 class="fu-text-sm fu-text-transform-uppercase">Custom elements</h2>
+          {%- for post in collections.customElements -%}
+            <a class="c-side-nav__sub-item" href=".{{post.url}}" target="comp-frame">{{post.data.label}}</a>
+          {%- endfor -%}
+          <h2 class="fu-text-sm fu-text-transform-uppercase">HTML</h2>
+          {%- for post in collections.html -%}
+            <a class="c-side-nav__sub-item" href=".{{post.url}}" target="comp-frame">{{post.data.label}}</a>
+          {%- endfor -%}
         </nav>
       </div>
     </div>
