--- a/src/css/main-layout.css
+++ b/src/css/main-layout.css
@@ -6,14 +6,11 @@ body {
   grid-area: header;
 }
 
-.fc-content {
-  grid-area: content;
-  overflow: hidden;
-  padding-top: 56.25%;
+.fc-frame {
   position: relative;
 }
 
-.fc-content iframe {
+.fc-frame iframe {
   border: 0;
   height: calc(100vh - var(--header-height));
   left: 0;
