--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,40 +1,46 @@
 h1,
-.u-text-xxl {
-  font-size: var(--text-xxl);
+.fu-text-xxxl {
+  font-family: var(--font-secondary);
+  font-size: var(--text-xxxl);
   line-height: var(--heading-line-height);
 }
 
 h2,
-.u-text-xl {
-  font-size: var(--text-xl);
+.fu-text-xxl {
+  font-family: var(--font-secondary);
+  font-size: var(--text-xxl);
   line-height: var(--heading-line-height);
 }
 
 h3,
-.u-text-lg {
-  font-size: var(--text-lg);
+.fu-text-xl {
+  font-family: var(--font-secondary);
+  font-size: var(--text-xl);
   line-height: var(--heading-line-height);
 }
 
 h4,
-.u-text-md {
-  font-size: var(--text-md);
+.fu-text-lg {
+  font-family: var(--font-secondary);
+  font-size: var(--text-lg);
   line-height: var(--heading-line-height);
 }
 
 h5,
-.u-text-sm {
-  font-size: var(--text-sm);
+.fu-text-md {
+  font-family: var(--font-secondary);
+  font-size: var(--text-md);
   line-height: var(--heading-line-height);
 }
 
 h6,
-.u-text-xs {
-  font-size: var(--text-xs);
+.fu-text-md {
+  font-family: var(--font-secondary);
+  font-size: var(--text-md);
   line-height: var(--heading-line-height);
 }
 
 p,
-.u-text-base {
+.fu-text-base {
   line-height: var(--body-line-height);
 }
