--- a/src/sass/_utilities.scss
+++ b/src/sass/_utilities.scss
@@ -1,7 +1,7 @@
+@import 'utilities/flow';
 
-
-// Utility generator
-// -----------------
+// Utility class generator
+// -----------------------
 
 $utilities: (
   // colors
