--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -34,7 +34,7 @@ h5,
 }
 
 h6,
-.fu-text-md {
+.fu-text-sm {
   font-family: var(--font-secondary);
   font-size: var(--text-md);
   line-height: var(--heading-line-height);
