--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -17,7 +17,7 @@
   <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
 <body>
-  <div class="[ fc-content ] [ fu-pad-xl fu-flow ]">
+  <div class="[ fc-content ] [ fu-p-xxl fu-flow ]">
     {{ content | safe }}
     {% bootstrap modulePath | safe %}
     {% scriptPath demoScript | safe %}
