--- a/src/sass/_functions.scss
+++ b/src/sass/_functions.scss
@@ -7,3 +7,12 @@
   @return mix(black, $color, $percentage);
 }
 
+@function negativify-map($map) {
+  $result: ();
+  @each $key, $value in $map {
+    @if $key != 0 {
+      $result: map-merge($result, ($key: (-$value)));
+    }
+  }
+  @return $result;
+}
