--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -37,8 +37,8 @@ html {
 /* Set core body defaults */
 body {
   min-height: 100vh;
-  background: var(--white-color);
-  color: var(--gray-10-color);
+  background: var(--body-bg);
+  color: var(--body-color);
   font-size: var(--text-md);
   font-family: var(--font-primary);
   text-rendering: optimizeSpeed;
