feat: separate site and component assets/styles

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -22,6 +22,7 @@
     {% include "../css/sidebar.css" %}
     {% include "../css/navigation.css" %}
     {% include "../css/button.css" %}
+    {% include "../docs/css/toc.css" %}
     {% endset %}
     <style>
       {{css | safe}}
@@ -33,7 +34,7 @@
     <div class="fl-grid-wrapper">
       <header class="fc-header">
         <section class="fc-header__section">
-          <img src="../img/logo.png" width="150" alt="FicusJS Components">
+          <img src="../docs/img/logo.png" width="150" alt="FicusJS Components">
         </section>
         <section class="fc-header__section">
           <a href="..." class="fc-button fc-button--link">Docs</a>
