feat: add doc scss

--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
   <!-- component css START -->
   {% set css %}
-  {% include "../css/content.css" %}
+  {% include "../components/css/content.css" %}
   {% endset %}
   <style>
     {{css | safe}}
