--- a/src/css/ficus-docs.css
+++ b/src/css/ficus-docs.css
@@ -1,1 +1,1 @@
-body{background:pink}
+a[href].fd-direct-link,a[href].fd-direct-link:visited{color:var(--gray-4-color);text-decoration:none;visibility:hidden}:hover>a[href].fd-direct-link{visibility:visible}
